--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "lucide-react": "^0.436.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
