--- a/package.json
+++ b/package.json
@@ -12,13 +12,22 @@
   "dependencies": {
     "axios": "^1.9.0",
     "chart.js": "^4.5.0",
+    "dexie": "^4.0.11",
+    "idb": "^8.0.3",
     "lucide-react": "^0.436.0",
+    "papaparse": "^5.5.3",
     "phosphor-react": "^1.4.1",
+    "pwa-asset-generator": "^8.0.5",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "workbox-background-sync": "^7.3.0",
+    "workbox-precaching": "^7.3.0",
+    "workbox-recipes": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-strategies": "^7.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
@@ -26,6 +35,7 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-pwa": "^1.0.0"
   }
 }
